tests/cases/structs/errors/struct-duplicate-field.ari
struct Point {
  x: i64,
  x: bool,
}

fn main() -> i64 {
  return 0;
}
